# Chess

./: .gitignore  CMakeLists.txt  bishop.cpp  bishop.h  board.cpp  board.h  chess.cpp  king.cpp  king.h  knight.cpp  knight.h  location.cpp  location.h  move.cpp  move.h  pawn.cpp  pawn.h  piece.cpp  piece.h  pieceType.h  position.cpp  position.h  queen.cpp  queen.h  rook.cpp  rook.h  space.cpp  space.h  testBoard.cpp  testBoard.h  testKing.cpp  testKing.h  testMove.cpp  testMove.h  testPosition.cpp  testPosition.h
